<resources>
    <string name="app_name">CellHistory</string>
    <string name="file_name">cellhistory</string>
    <string name="areas_file_name">cellhistory_areas</string>
	<string name="empty"></string>
	<string name="unit_m">m</string>
	<string name="unit_km">Km</string>
	<string name="unit_ms">m/s</string>
	<string name="unit_mph">Mph</string>
	<string name="unit_kmh">Km/h</string>
	<string name="zero">0</string>
	<string name="zero_real">0,0</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="background_color">black</string>
    <string name="connectivity_mobile">Mobile</string>
    <string name="connectivity_wifi">Wifi</string>
    <string name="connectivity_none">Not connected</string>
    <string name="switch_description">Data to save: </string>
	<string name="lblNeighboring">Neighboring: </string>
	<string name="lblProvider">Provider name: </string>
	<string name="toggleOn">Record ON</string>
	<string name="toggleOff">Record OFF</string>
	<string name="lblOperator">Operator name: </string>
	<string name="lblMCC">Mobile Country Code: </string>
	<string name="lblMNC">Mobile Network Code: </string>
	<string name="lblCellId">Cell Identifier: </string>
	<string name="lblLAC">Local Area Code: </string>
	<string name="lblPSC">Primary Scrambling Code: </string>
	<string name="lblType">Mobile Type: </string>
	<string name="lblNetwork">Mobile Network: </string>
	<string name="lblASU">Arbitrary Strength Unit: </string>
	<string name="lblLVL">Movile level: </string>
	<string name="lblSS">Signal strength: </string>
	<string name="lblSSP">Signal strength (%): </string>
	<string name="lblCellGeolocation">Cell location: </string>
	<string name="lblCurrentGeolocation">Current location: </string>
	<string name="geoloc_disabled">Geolocation disabled.</string>
	<string name="lblGeoProvider">Provider: </string>
	<string name="lblSatellites">GPS Satellites: </string>
	<string name="lblSpeed">GPS Speed: </string>
	<string name="lblDistance">Cell distance: </string>
	<string name="txtGpsDisabled">GPS service disabled.</string>
	<string name="txtGpsWaitSatellites">Waiting for satellites.</string>
    <string name="buttonOk">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="lblAreaRadius">Radius (m): </string>
    <string name="lblAreaLongitude">Longitude: </string>
    <string name="lblAreaLatitude">Latitude: </string>
    <string name="lblAreaName">Name: </string>
	<string name="lblRecords">Record: </string>
	<string name="lblBuffer">Buffer: </string>
	<string name="lblSize">Size: </string>
    <string name="pref_ui_title">User Interface</string>
    <string name="pref_geolocation_management_title">Geolocation</string>
    <string name="pref_recorder_title">Recorder</string>
    <string name="pref_ui_summary">Configure the user interface.</string>
    <string name="pref_geolocation_management_summary">Configure the geolocation.</string>
    <string name="pref_recorder_summary">Configure the recorder.</string>
    <string name="pref_timers_title">Timers</string>
    <string name="pref_timers_summary">Configure the application timers.</string>
	<string name="pref_title_ui">User Interface</string>
	<string name="pref_title_recorder">Recorder</string>
    <string name="pref_title_settings">Settings</string>
    <string name="pref_title_infos">Informations</string>
    <string name="pref_title_timers">Timers</string>
    <string name="pref_title_logs">Logs</string>
    <string name="pref_timers_ui_title">User interface</string>
    <string name="pref_timers_ui_summary">Used to refresh the UI (restart required).</string>
    <string name="pref_timers_task_provider_title">Provider</string>
    <string name="pref_timers_task_provider_summary">Used to retrieve the cell tower location (restart required).</string>
    <string name="pref_timers_task_gps_title">GPS</string>
    <string name="pref_timers_task_gps_summary">Used to retrieve the speed and the distance (restart required).</string>
    <string name="pref_timers_task_tower_title">Tower</string>
    <string name="pref_timers_task_tower_summary">Used to retrieve the cell tower informations (restart required).</string>
    <string name="pref_timers_task_network_title">Network</string>
    <string name="pref_timers_task_network_summary">Used to retrieve the mobile network information (restart required).</string>
    <string name="pref_timers_task_recorder_title">Recorder</string>
    <string name="pref_timers_task_recorder_summary">Used to write the data (restart required).</string>
	<string name="pref_title_geolocation_opencellid">Geolocation OpenCellID</string>
    <string name="pref_chart_enable_title">Chart</string>
	<string name="pref_chart_enable_summary">Display or hide the chart area.</string>
	<string name="pref_keep_screen_on_title">Keep screen turned on</string>
    <string name="pref_keep_screen_on_summary">As long as the application is visible to the user, keep the device\'s screen turned on and bright.</string>
    <string name="pref_themes_title">Themes</string>
    <string name="pref_themes_summary">Change the application theme.</string>
    <string name="pref_animations_title">Animations</string>
    <string name="pref_animations_summary">Change the application animation.</string>
    <string name="pref_delete_file_title">Previous file</string>
    <string name="pref_delete_file_summary">Removes the previous session file before starting.</string>
	<string name="pref_save_path_title">Directory</string>
    <string name="pref_save_path_summary">Click to select the working directory.</string>
	<string name="pref_flush_title">Flush</string>
    <string name="pref_flush_summary">Maximum of items before flushing the temporary buffer.</string>
	<string name="pref_sep_title">Separator</string>
    <string name="pref_sep_summary">The separator to use to separate each words into the CSV file.</string>
	<string name="pref_neighboring_sep_title">Neighboring separator</string>
    <string name="pref_neighboring_sep_summary">The separator to use to separate each "neighboring entries" into the current CSV line.</string>
	<string name="pref_detect_change_title">Change only</string>
    <string name="pref_detect_change_summary">Writes the entry only if a data change is detected.</string>
    <string name="pref_geolocation_title">Cell location</string>
    <string name="pref_geolocation_summary">Locates the current telephony cell using the network requests.</string>
    <string name="pref_geolocation_timeout_title">Request timeout</string>
    <string name="pref_geolocation_timeout_summary">Avoids that some requests take too much time when the target is unavailable(in second).</string>
    <string name="pref_geolocation_opencellid_summary">Configure the OpenCellID provider.</string>
    <string name="pref_geolocation_opencellid_title">OpenCellID</string>
    <string name="pref_geolocation_key_opencellid_summary">Your OpenCellID API.</string>
    <string name="pref_geolocation_key_opencellid_title">OpenCellID API Key</string>
    <string name="pref_geolocation_get_key_opencellid_title">Click to obtain the OpenCellID API Key</string>
	<string name="pref_log_enable_title">Enable</string>
	<string name="pref_log_enable_summary">Enable the logs processing.</string>
	<string name="pref_log_title">Display</string>
	<string name="pref_log_summary">Display the last application logs.</string>
    <string name="pref_changelog_title">Changelog</string>
	<string name="pref_changelog_summary">Click to display the application changelog.</string>
     <string name="pref_recorder_filter_title">Filters</string>
     <string name="pref_recorder_filter_provider_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_provider_title">Provider name</string>
     <string name="pref_recorder_filter_operator_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_operator_title">Operator name</string>
     <string name="pref_recorder_filter_mcc_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_mcc_title">Mobile Country Code</string>
     <string name="pref_recorder_filter_mnc_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_mnc_title">Mobile Network Code</string>
     <string name="pref_recorder_filter_cellid_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_cellid_title">Cell Identifier</string>
     <string name="pref_recorder_filter_lac_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_lac_title">Local Area Code</string>
     <string name="pref_recorder_filter_psc_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_psc_title">Primary Scrambling Code</string>
     <string name="pref_recorder_filter_signalstrength_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_signalstrength_title">Signal strength</string>
     <string name="pref_recorder_filter_type_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_type_title">Mobile type</string>
     <string name="pref_recorder_filter_asu_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_asu_title">Arbitrary Strength Unit</string>
     <string name="pref_recorder_filter_level_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_level_title">Mobile Level</string>
     <string name="pref_recorder_filter_networkid_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_networkid_title">Mobile network</string>
     <string name="pref_recorder_filter_speed_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_speed_title">GPS Speed</string>
     <string name="pref_recorder_filter_distance_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_distance_title">Cell distance</string>
     <string name="pref_recorder_filter_satellites_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_satellites_title">GPS Satellites</string>
     <string name="pref_recorder_filter_neighboring_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_neighboring_title">Neighboring</string>
     <string name="pref_recorder_filter_data_speed_tx_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_data_speed_tx_title">Mobile data TX</string>
     <string name="pref_recorder_filter_data_speed_rx_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_data_speed_rx_title">Mobile data RX</string>
     <string name="pref_recorder_filter_data_direction_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_data_direction_title">Mobile data direction</string>
     <string name="pref_recorder_filter_ipv6_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_ipv6_title">Mobile IPv6</string>
     <string name="pref_recorder_filter_ipv4_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_ipv4_title">Mobile IPv4</string>
     <string name="pref_recorder_filter_areas_summary">Detect a changes if this value is updated.</string>
     <string name="pref_recorder_filter_areas_title">Interested areas</string>
</resources>