<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="prefScreen">
    <PreferenceCategory android:title="@string/pref_title_settings" android:key="prefCatSettings" >
        <Preference
            android:key="prefUI"
            android:summary="@string/pref_ui_summary"
            android:title="@string/pref_ui_title">
        </Preference>
        <Preference
            android:key="prefTimers"
            android:summary="@string/pref_timers_summary"
            android:title="@string/pref_timers_title">
        </Preference>
        <CheckBoxPreference
            android:key="prefChartEnable"
            android:defaultValue="true"
            android:summary="@string/pref_chart_enable_summary"
            android:title="@string/pref_chart_enable_title" />
        <Preference
            android:key="prefGeolocation"
            android:title="@string/pref_geolocation_management_title"
            android:summary="@string/pref_geolocation_management_summary">
        </Preference>
        <Preference
            android:key="prefRecorder"
            android:title="@string/pref_recorder_title"
            android:summary="@string/pref_recorder_summary">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_logs" android:key="prefCatLogs">
        <CheckBoxPreference
            android:key="prefLogsEnable"
            android:defaultValue="false"
            android:summary="@string/pref_log_enable_summary"
            android:title="@string/pref_log_enable_title" />
        <Preference
            android:key="prefLogs"
            android:title="@string/pref_log_title"
            android:summary="@string/pref_log_summary">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_infos" >
        <Preference
            android:key="prefChangelog"
            android:title="@string/pref_changelog_title"
		    android:summary="@string/pref_changelog_summary">
        </Preference>
        <Preference
            android:key="prefVersion"
		    android:enabled="false" 
		    android:selectable="false"
		    android:persistent="false"
		    android:shouldDisableView="false" >
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
    