<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/pref_title_timers" >
        <EditTextPreference
            android:key="timersUI"
            android:defaultValue="1000"
            android:summary="@string/pref_timers_ui_summary"
            android:title="@string/pref_timers_ui_title"   
    		android:inputType="number" />
        <EditTextPreference
            android:key="timersTaskTower"
            android:defaultValue="1000"
            android:summary="@string/pref_timers_task_tower_summary"
            android:title="@string/pref_timers_task_tower_title"   
    		android:inputType="number" />
        <EditTextPreference
            android:key="timersTaskProvider"
            android:defaultValue="1000"
            android:summary="@string/pref_timers_task_provider_summary"
            android:title="@string/pref_timers_task_provider_title"   
    		android:inputType="number" />
        <EditTextPreference
            android:key="timersTaskGps"
            android:defaultValue="1000"
            android:summary="@string/pref_timers_task_gps_summary"
            android:title="@string/pref_timers_task_gps_title"   
    		android:inputType="number" />
        <EditTextPreference
            android:key="timersTaskNetwork"
            android:defaultValue="1000"
            android:summary="@string/pref_timers_task_network_summary"
            android:title="@string/pref_timers_task_network_title"   
    		android:inputType="number" />
        <EditTextPreference
            android:key="timersTaskRecorder"
            android:defaultValue="1000"
            android:summary="@string/pref_timers_task_recorder_summary"
            android:title="@string/pref_timers_task_recorder_title"   
    		android:inputType="number" />
    </PreferenceCategory>
</PreferenceScreen>