<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/pref_title_ui" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="uiKeepScreenOn"
            android:summary="@string/pref_keep_screen_on_summary"
            android:title="@string/pref_keep_screen_on_title" />
        
        <ListPreference
            android:key="atk_key_themes"
            android:defaultValue="org.kei.android.phone.cellhistory.prefs.THEME_DARK"
            android:entries="@array/entries_themes"
            android:summary="@string/pref_themes_summary"
            android:entryValues="@array/values_themes"
            android:title="@string/pref_themes_title" />
        
        <ListPreference
            android:key="atk_key_animations"
            android:defaultValue="org.kei.android.atk.utils.fx.ANIMATION_FADE"
            android:entries="@array/entries_animations"
            android:summary="@string/pref_animations_summary"
            android:entryValues="@array/values_animations"
            android:title="@string/pref_animations_title" />
    </PreferenceCategory>
</PreferenceScreen>