<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/pref_geolocation_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="geolocationLocate"
            android:summary="@string/pref_geolocation_summary"
            android:title="@string/pref_geolocation_title" />
        <EditTextPreference
            android:key="geolocationLocateTimeout"
            android:defaultValue="15"
            android:summary="@string/pref_geolocation_timeout_summary"
            android:title="@string/pref_geolocation_timeout_title"   
    		android:inputType="number" />
        <Preference
            android:key="geolocationOpenCellIdProvider"
            android:summary="@string/pref_geolocation_opencellid_summary"
            android:title="@string/pref_geolocation_opencellid_title">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>