<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:lib="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ToggleButton
            android:id="@+id/toggleOnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/toggleOn"
            android:textOn="@string/toggleOff" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/lblRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_row="0"
                android:text="@string/lblRecords"
                android:textColor="#0099cc" />

            <TextView
                android:id="@+id/txtRecords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:layout_row="0"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/lblBuffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_row="1"
                android:text="@string/lblBuffer"
                android:textColor="#0099cc" />

            <ProgressBar
                android:id="@+id/pbBuffer"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:layout_row="1" />

            <TextView
                android:id="@+id/lblSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_row="3"
                android:text="@string/lblSize"
                android:textColor="#0099cc" />

            <TextView
                android:id="@+id/txtSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:layout_row="3"
                android:text="@string/empty" />
        </GridLayout>

    </LinearLayout>

</ScrollView>