<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:padding="10dp" >

    <TextView
        android:id="@+id/lblAreaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/lblAreaName"
        android:textColor="?attr/labelTextColor" />

    <EditText
        android:id="@+id/txtAreaName"
        android:labelFor="@+id/txtAreaName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:ems="10"
        android:layout_marginEnd="50dp"
        android:inputType="textCapWords" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblAreaLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/lblAreaLatitude"
        android:textColor="?attr/labelTextColor" />

    <EditText
        android:id="@+id/txtAreaLatitude"
        android:labelFor="@+id/txtAreaLatitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:ems="10"
        android:layout_marginEnd="50dp"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/lblAreaLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/lblAreaLongitude"
        android:textColor="?attr/labelTextColor" />

    <EditText
        android:id="@+id/txtAreaLongitude"
        android:labelFor="@+id/txtAreaLongitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="10"
        android:layout_marginEnd="50dp"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/lblAreaRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/lblAreaRadius"
        android:textColor="?attr/labelTextColor" />

    <EditText
        android:id="@+id/txtAreaRadius"
        android:labelFor="@+id/txtAreaRadius"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:ems="10"
        android:layout_marginEnd="50dp"
        android:inputType="number" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_row="4"
        android:gravity="end"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonOk" />

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel" />
    </LinearLayout>

</GridLayout>